@@ -1,5 +1,6 @@
 From version 0.5.3 to 0.5.4
 - some build notes.
+- bugfix for setting domain identities in "from" 
 
 From version 0.5.2 to 0.5.3
 - SIP publish can be forwarded through plugins. Forward plugin publishes
